# EXPANSE

./: .gitignore  .pre-commit-config.yaml  MockResolvedGalaxyTesting.ipynb  README.md  ResolvedGalaxy.py  ResolvedSEDApp.py  ResolvedSEDNotebook.ipynb  bokeh_test.ipynb  galaxies.fits  pyproject.toml  requirements.txt  run_mock_galaxies.py  synthesizer_functions.py  testing.ipynb
.github/workflows/: python-app.yml  python-publish.yml
catalogs/: JOF_psfmatched_MASTER_Sel-F277W+F356W+F444W_v11_total_selected.fits  JOF_psfmatched_MASTER_Sel-F277W+F356W+F444W_v11_total_selected_v2.fits
data/: JOF_mock_lowmass.h5  OutshiningLiterature.csv
examples/: advanced_features.ipynb  create_fitsmap.ipynb  forcepho_example.py  intro.ipynb  multiple_galaxies.ipynb
galaxies/: 645.h5  JOF_psfmatched_36.h5  JOF_psfmatched_370.h5  JOF_psfmatched_478.h5  JOF_psfmatched_531.h5  JOF_psfmatched_778.h5  JOF_psfmatched_801.h5  NGDEEP2_645.h5
pipes_scripts/: pipes_models.py  plotpipes.py
plotting_scripts/: plot_selection.ipynb
psfs/: ACS_WFC_EE.txt  encircled_energy.py  kernel_003_F090WtoF444W.fits  kernel_003_F115WtoF444W.fits  kernel_003_F150WtoF444W.fits  kernel_003_F162MtoF444W.fits  kernel_003_F182MtoF444W.fits  kernel_003_F200WtoF444W.fits  kernel_003_F210MtoF444W.fits  kernel_003_F250MtoF444W.fits  kernel_003_F277WtoF444W.fits  kernel_003_F300MtoF444W.fits  kernel_003_F335MtoF444W.fits  kernel_003_F356WtoF444W.fits  kernel_003_F360MtoF444W.fits  kernel_003_F410MtoF444W.fits  kernel_003_F430MtoF444W.fits  kernelmaker.sh  make_psf.py  psfmaker.py  resamplepsf_tom.py
psfs/JOF_2506/: kernel_F090WtoF444W.fits  kernel_F115WtoF444W.fits  kernel_F150WtoF444W.fits  kernel_F162MtoF444W.fits  kernel_F182MtoF444W.fits  kernel_F200WtoF444W.fits  kernel_F210MtoF444W.fits  kernel_F250MtoF444W.fits  kernel_F277WtoF444W.fits  kernel_F300MtoF444W.fits  kernel_F335MtoF444W.fits  kernel_F356WtoF444W.fits  kernel_F410MtoF444W.fits  webbpsf_F090W.fits  webbpsf_F115W.fits  webbpsf_F150W.fits  webbpsf_F162M.fits  webbpsf_F182M.fits  webbpsf_F200W.fits  webbpsf_F210M.fits  webbpsf_F250M.fits  webbpsf_F277W.fits  webbpsf_F300M.fits  webbpsf_F335M.fits  webbpsf_F356W.fits  webbpsf_F410M.fits  webbpsf_F444W.fits
scripts/: MockResolvedGalaxyTesting.ipynb  PALETTE_mock.ipynb  ResolvedSEDNotebook.ipynb  SFH_plots.ipynb  bagpipes_parallel.py  batch_fitsmap.py  correlated_noise.ipynb  galaxies.fits  generate_galaxy.ipynb  generate_sphinx_galaxies.py  home.py  init_from_basics.ipynb  outshining_paper_figures.ipynb  outshining_plots.ipynb  photoz_lognorm_galaxies.fits  pipeline.py  plot_selection.ipynb  radial_properties.ipynb  referee_tests.ipynb  rerun_fixed_z.py  rerun_outshined.py  run_all_singlebin.py  run_db_fitting.py  run_mock_galaxies.py  run_pysersic.py  sphinx_mock_galaxies.ipynb  synthesizer_demo.ipynb  test_autogal_fitting.py  testing.ipynb  webbpsf_sed_fitting.py
src/EXPANSE/: NewResolvedSEDApp.py  ResolvedGalaxy.py  ResolvedSEDApp.py  __init__.py  _version.py  synthesizer_functions.py  utils.py
src/EXPANSE.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/EXPANSE/bagpipes/: __init__.py  pipes_models.py  plotpipes.py  run_bagpipes_parallel.py
src/EXPANSE/bagpipes/filters/: filtconvert.py
src/EXPANSE/dense_basis/: __init__.py  db.py
src/EXPANSE/eazy/: __init__.py  eazy_config.py
src/EXPANSE/forcepho/: IMPLEMENTATION.md  README.md  __init__.py  forcepho_utils.py
src/EXPANSE/gui/: OldResolvedSEDApp.py  ResolvedSEDApp.py  __init__.py
src/EXPANSE/prospector/: Plotspector.py  __init__.py  run_prospector.py  run_prospector_parallel.py  utils.py
src/EXPANSE/sphinx/: __init__.py  functions.py
src/EXPANSE/synthesizer/: __init__.py
src/EXPANSE/vis/: __init__.py  plotting.py
tests/: test_galaxies.py  test_pipes.py
